Make sure text aligned to left

--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -14,6 +14,7 @@ $link-color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: start;
 
   .menu-container {
     width: 100%;
