--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,7 +15,7 @@ option,
 label,
 a,
 a.sqs-block-button-element,
-#siteWrapper *,
+#siteWrapper *:not(i),
 #siteWrapper .sqs-block-button-element,
 table,
 th,
